--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "type": "git",
     "url": "https://github.com/frankbria/iris.git"
   },
-  "main": "index.js",
+  "main": "dist/cli.js",
   "bin": {
-    "iris": "./cli.js"
+    "iris": "./dist/cli.js"
   },
   "scripts": {
-    "test": "echo \"No tests yet\""
+    "build": "tsc",
+    "test": "jest",
+    "start": "ts-node src/cli.ts"
   },
   "author": "FRANK BRIA <frank@frankbria.com>",
   "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "commander": "^11.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "@types/node": "^18.16.18",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
