--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "commander": "^11.0.0"
+    "commander": "^11.0.0",
+    "playwright": "^1.35.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
