--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "iris-suite",
   "version": "0.0.1",
   "description": "Interface Recognition & Interaction Suite - AI-powered UI understanding and testing",
-  "keywords": ["ai", "ui", "testing", "automation", "playwright", "vision", "developer-tools"],
+  "keywords": [
+    "ai",
+    "ui",
+    "testing",
+    "automation",
+    "playwright",
+    "vision",
+    "developer-tools"
+  ],
   "homepage": "https://github.com/frankbria/iris",
   "bugs": "https://github.com/frankbria/iris/issues",
   "repository": {
@@ -25,11 +33,13 @@
   },
   "dependencies": {
     "commander": "^11.0.0",
-    "playwright": "^1.35.0"
+    "playwright": "^1.35.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.2",
     "@types/node": "^18.16.18",
+    "@types/ws": "^8.18.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
