feat: complete Phase 1 SQLite persistence and documentation
- Add better-sqlite3 dependency with TypeScript types
- Implement db.ts module with database initialization and CRUD operations
- Integrate database persistence into CLI run command with timestamps
- Add comprehensive test suite for database operations
- Update README.md with Phase 1 usage examples and development guide
- Fix CLI test to prevent WebSocket server conflicts
- Mark all Phase 1 persistence and documentation tasks as complete

All tests passing with 93% code coverage

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "better-sqlite3": "^12.2.0",
     "commander": "^11.0.0",
     "playwright": "^1.35.0",
     "ws": "^8.13.0"
