docs: architecture plan for phase 2

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "dependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "better-sqlite3": "^12.2.0",
+    "chokidar": "^3.5.3",
     "commander": "^11.0.0",
+    "openai": "^4.0.0",
     "playwright": "^1.35.0",
     "ws": "^8.13.0"
   },
