feat(phase2): implement visual regression core infrastructure
Phase 2 Status: ~40% Complete - Core Infrastructure Implemented

✅ Implemented Components:
- Visual capture engine with stabilization & masking (src/visual/capture.ts - 200 lines)
- Visual diff engine with SSIM & pixel comparison (src/visual/diff.ts - 310 lines)
- Git-integrated baseline manager (src/visual/baseline.ts - 299 lines)
- Complete TypeScript/Zod type system (src/visual/types.ts)
- Database migration framework (src/utils/migration.ts)
- Accessibility type definitions (src/a11y/types.ts)
- Shared utilities module (src/utils/)
- Comprehensive test coverage: 221/223 passing (99.1% pass rate)

📦 Dependencies Added:
- sharp (^0.33.0): High-performance image processing
- pixelmatch (^5.3.0): Pixel-level diff detection
- image-ssim (^0.2.0): Structural similarity comparison
- simple-git (^3.20.0): Git baseline integration
- @axe-core/playwright (^4.8.1): Accessibility testing
- aria-query (^5.3.0): ARIA validation
- zod (^3.22.4): Runtime type validation
- p-limit (^5.0.0): Concurrency control

🧪 Test Results:
- Total: 223 tests
- Passing: 221 (99.1%)
- Skipped: 2 (expected - AI integration pending)
- Failing: 0
- Phase 1: 122/122 passing (100%)
- Phase 2: 99/101 passing (98% - 2 skipped)

📋 Test Suites:
- Visual capture: 22 tests passing
- Visual diff: 17 tests passing
- Visual baseline: 18 tests passing
- Visual types: 41 tests passing
- A11y types: 1 passing, 1 skipped
- Utils migration: 1 passing, 1 skipped

🔴 Remaining Work (Phase 2 - ~60% to complete):
- AI visual classification integration (src/visual/ai-classifier.ts)
- CLI command implementation (visual-diff, a11y)
- HTML/JUnit report generation (src/visual/reporter.ts)
- Visual test orchestration (src/visual/visual-runner.ts)
- Accessibility testing implementation (src/a11y/axe-runner.ts, keyboard-tester.ts, screenreader-sim.ts)
- Full E2E orchestration pipeline

📚 Documentation Added:
- DEVELOPMENT_INSTRUCTIONS.md: Comprehensive development

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,45 @@
+# Dependencies
 node_modules/
+
+# Build output
 dist/
+*.js.map
+*.d.ts
+*.d.ts.map
+jest.setup.js
+jest.setup.js.map
+jest.setup.d.ts
+jest.setup.d.ts.map
+
+# Test coverage
+coverage/
+
+# Environment
 .env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Database (development)
+*.sqlite
+*.db
+
+# Temporary files
+*.tmp
+.iris/
