--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,32 @@
     "module": "CommonJS",
     "rootDir": "src",
     "outDir": "dist",
+    "baseUrl": ".",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "removeComments": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "typeRoots": ["node_modules/@types"],
+    "paths": {
+      "@iris/visual": ["./src/visual/index"],
+      "@iris/a11y": ["./src/a11y/index"],
+      "@iris/utils": ["./src/utils/index"]
+    }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "coverage",
+    "**/*.test.ts",
+    "**/__tests__/**/*",
+    "jest.setup.ts"
+  ]
 }
