--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.65.0",
     "@axe-core/playwright": "^4.8.1",
     "@types/better-sqlite3": "^7.6.13",
     "aria-query": "^5.3.0",
